--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="https://i.imgur.com/EeUEi7W.png" />
+    <!-- Remove the old vite.svg line and add these: -->
+    <link rel="icon" type="image/png" sizes="32x32" href="https://i.imgur.com/EeUEi7W.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="https://i.imgur.com/EeUEi7W.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="https://i.imgur.com/EeUEi7W.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Spatial Yellowpage Directory</title>
     <script src="https://cdn.tailwindcss.com"></script>
