--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
     <title>Spatial Yellowpage Directory</title>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-C7DE49WRTR"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-C7DE49WRTR');
+</script>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
